@@ -110,7 +110,7 @@ my $tempfile = "/tmp/$tempscan.$$";
 my $nivil = "$config->{paths}->{scanners}\/Nessus\/nivil.rb";
 my $nessus2ivil = "perl -I$config->{paths}->{modules} $config->{paths}->{bindir}\/nessus2ivil";
 my $load_ivil = "perl -I$config->{paths}->{modules} $config->{paths}->{bindir}\/load_ivil";
-my $attach_file = "perl -I$config->{paths}->{modules} $config->{paths}->{bindir}\/load_file";
+my $attach_file = "perl -I$config->{paths}->{modules} $config->{paths}->{bindir}\/attach_file";
 
 print "Attempting to find policy ID for policy $policy\n" if $verbose;
 $cmd = "$nivil -u '$user' -p '$password' -s '$server' --show-policies";
