@@ -68,7 +68,7 @@ $port = 9390 unless $port;
 
 my $config = get_config();
 my $load_ivil = "perl -I$config->{paths}->{modules} $config->{paths}->{bindir}\/load_ivil";
-my $attach_file = "perl -I$config->{paths}->{modules} $config->{paths}->{bindir}\/load_file";
+my $attach_file = "perl -I$config->{paths}->{modules} $config->{paths}->{bindir}\/attach_file";
 
 if ( ! $hosts_file || ! -e $hosts_file ) {
 	print "You must specify a valid hosts file";
