@@ -21,6 +21,7 @@ New features / Issues resolved
 * Clarified the purpose of status buttons, filters and bul update form in GUI.
 * Added the capability to filter on severity, finding text and remark text
 * Added the ability for scan scripts to add attachments to runs
+* All scan scripts add attachments to runs
 * Scan history can now be viewed in the GUI and attachments can be dowloaded
 * IP numbers now sort correctly
 * Restyled status buttons and edit button
